--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#Server
+server.port=8099
 
+#DataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mystore?characterEncoding=utf-8&serverTimeZone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=he715816
+
+#mybatis-plus
+#????Mybatis-plus?????SQL??
+logging.level.com.mystore.persistence=trace
