--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,9 @@ spring.datasource.username=root
 spring.datasource.password=he715816
 
 #mybatis-plus
-#????Mybatis-plus?????SQL??
 logging.level.com.mystore.persistence=trace
+
+#Image Server
+image.server.url=XXX
+image.server.username=hhh
+image.server.password=777
