阿里云OSS对象存储使用

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,16 @@ logging.level.com.mystore.persistence=trace
 image.server.url=XXX
 image.server.username=hhh
 image.server.password=777
+
+#Aliyun-oss
+aliyun.oss.accessId=LTAI5tNxLEKWnpog2izmeHVW
+aliyun.oss.accessKey=M5dm5WpszRUcUvyPTNq5fjXsr5Q7Cx
+aliyun.oss.endpoint=oss-cn-hangzhou.aliyuncs.com
+
+aliyun.oss.bucket=mystore-api-demo
+aliyun.oss.dir=test
+
+aliyun.oss.policy.expire=120
+# ?????????????M
+aliyun.oss.maxSize=10
+aliyun.oss.callbackURL=https://575098d8d3.zicp.fun/alioss/callback
